@@ -34,3 +34,16 @@ dependencies {
     implementation(projects.composeApp)
     implementation(libs.compose.ui.desktop)
 }
+//webview-parkwoocheol依赖了sun.awt和sun.lwawt等模块，在Java 17中需要添加以下JVM参数来允许访问这些模块：
+compose.desktop {
+    application {
+        jvmArgs += listOf(
+            "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+            "--add-exports=java.desktop/sun.lwawt=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
+            "--add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
+        )
+    }
+}
